Fix some JDK error